[gd_scene format=3 uid="uid://byxacmo28fmqd"]

[ext_resource type="Script" uid="uid://ccyjbfd6ou6jn" path="res://scripts/insideArea2.gd" id="1_r4118"]
[ext_resource type="Texture2D" uid="uid://bpcudtk40dgv4" path="res://sprite/sceneAssets/Building Tiles 32x32.png" id="2_ean7f"]
[ext_resource type="PackedScene" uid="uid://5sbtpo5wx7nl" path="res://scenes/Task/transitionfade.tscn" id="2_k5wkf"]
[ext_resource type="PackedScene" uid="uid://dtl0trh7p80xd" path="res://scenes/Task/pauseMenu.tscn" id="2_r4118"]
[ext_resource type="Texture2D" uid="uid://dxnrcw3lqoq" path="res://sprite/sceneAssets/Terrain (16x16).png" id="3_r4118"]
[ext_resource type="PackedScene" uid="uid://d3xh5eo0555x7" path="res://scenes/infrastructures/Transition.tscn" id="4_k5wkf"]
[ext_resource type="PackedScene" uid="uid://t3rgi42fxxup" path="res://scenes/CharScenes/player1.tscn" id="6_mdvpc"]
[ext_resource type="PackedScene" uid="uid://6wc27ijwmypk" path="res://scenes/CharScenes/boss1.tscn" id="8_r4118"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6tyrg"]
texture = ExtResource("2_ean7f")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
36:0/0 = 0
37:0/0 = 0
38:0/0 = 0
39:0/0 = 0
40:0/0 = 0
41:0/0 = 0
42:0/0 = 0
43:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0
35:1/0 = 0
36:1/0 = 0
37:1/0 = 0
38:1/0 = 0
39:1/0 = 0
40:1/0 = 0
41:1/0 = 0
42:1/0 = 0
43:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
40:3/0 = 0
41:3/0 = 0
42:3/0 = 0
43:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
39:4/0 = 0
40:4/0 = 0
41:4/0 = 0
42:4/0 = 0
43:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
36:5/0 = 0
37:5/0 = 0
38:5/0 = 0
39:5/0 = 0
40:5/0 = 0
41:5/0 = 0
42:5/0 = 0
43:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
34:6/0 = 0
35:6/0 = 0
36:6/0 = 0
37:6/0 = 0
38:6/0 = 0
39:6/0 = 0
40:6/0 = 0
41:6/0 = 0
42:6/0 = 0
43:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
34:7/0 = 0
35:7/0 = 0
36:7/0 = 0
37:7/0 = 0
38:7/0 = 0
39:7/0 = 0
40:7/0 = 0
41:7/0 = 0
42:7/0 = 0
43:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rdni6"]
texture = ExtResource("3_r4118")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 2.1583061, 8, 8, -8, 8)
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:0/0 = 0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:1/0 = 0
15:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:2/0 = 0
14:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:2/0 = 0
15:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_al777"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_6tyrg")
sources/1 = SubResource("TileSetAtlasSource_rdni6")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4118"]
size = Vector2(8.57143, 54.444447)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k5wkf"]
size = Vector2(33, 61)

[node name="Area_2" type="Node2D" unique_id=528370527]
script = ExtResource("1_r4118")

[node name="TransitionFade" parent="." unique_id=1615848282 instance=ExtResource("2_k5wkf")]

[node name="PauseMenu" parent="." unique_id=908656370 instance=ExtResource("2_r4118")]

[node name="TileMap" type="TileMap" parent="." unique_id=1893905521]
tile_set = SubResource("TileSet_al777")
format = 2
layer_0/tile_data = PackedInt32Array(-65536, 1966080, 6, -65535, 2031616, 6, -65534, 2031616, 6, -65533, 2031616, 6, -65532, 2031616, 6, -65531, 2031616, 6, -65530, 2031616, 6, -65529, 2097152, 6, -65528, 2162688, 6, -65527, 2228224, 6, -65526, 2031616, 6, -65525, 2097152, 6, -65524, 2162688, 6, -65523, 2228224, 6, -65522, 2031616, 6, -65521, 2097152, 6, -65520, 2162688, 6, -65519, 2031616, 6, -65518, 2097152, 6, -65517, 2162688, 6, -65516, 2228224, 6, -65515, 2031616, 6, -65514, 2097152, 6, -65513, 2162688, 6, -65512, 2228224, 6, -65511, 2031616, 6, -65510, 2097152, 6, -65509, 2162688, 6, -65508, 2228224, 6, -65507, 2031616, 6, 0, 1, 0, 1, 65537, 0, 2, 65537, 0, 3, 65537, 0, 4, 65537, 0, 5, 65537, 0, 6, 65537, 0, 7, 65537, 0, 8, 65537, 0, 9, 65537, 0, 10, 65537, 0, 11, 65537, 0, 12, 65537, 0, 13, 65537, 0, 14, 65537, 0, 15, 65537, 0, 16, 65537, 0, 17, 65537, 0, 18, 65537, 0, 19, 65537, 0, 20, 65537, 0, 21, 65537, 0, 22, 65537, 0, 23, 65537, 0, 24, 65537, 0, 25, 65537, 0, 26, 65537, 0, 27, 65537, 0, 28, 65537, 0, 29, 65537, 0, 30, 65537, 0, -327680, 1966080, 7, -262144, 1966080, 7, -196608, 1966080, 6, -131072, 1966080, 7, -327679, 2031616, 7, -262143, 2031616, 7, -196607, 2031616, 6, -131071, 2031616, 7, -327678, 2031616, 7, -262142, 2031616, 7, -196606, 2031616, 6, -131070, 2031616, 7, -327677, 2031616, 7, -262141, 2031616, 7, -196605, 2031616, 6, -131069, 2031616, 7, -327676, 2031616, 7, -262140, 2031616, 7, -196604, 2031616, 6, -131068, 2031616, 7, -327675, 2031616, 7, -262139, 2031616, 7, -196603, 2031616, 6, -131067, 2031616, 7, -327674, 2031616, 7, -262138, 0, 1, -196602, 0, 2, -131066, 0, 3, -327673, 2097152, 7, -262137, 65536, 1, -196601, 65536, 2, -131065, 65536, 3, -327672, 2162688, 7, -262136, 0, 1, -196600, 0, 2, -131064, 0, 3, -327671, 2228224, 7, -262135, 65536, 1, -196599, 65536, 2, -131063, 65536, 3, -327670, 2031616, 7, -262134, 0, 1, -196598, 0, 2, -131062, 0, 3, -327669, 2097152, 7, -262133, 65536, 1, -196597, 65536, 2, -131061, 65536, 3, -327668, 2162688, 7, -262132, 0, 1, -196596, 0, 2, -131060, 0, 3, -327667, 2228224, 7, -262131, 65536, 1, -196595, 65536, 2, -131059, 65536, 3, -327666, 2031616, 7, -262130, 0, 1, -196594, 0, 2, -131058, 0, 3, -327665, 2097152, 7, -262129, 65536, 1, -196593, 65536, 2, -131057, 65536, 3, -327664, 2162688, 7, -262128, 0, 1, -196592, 0, 2, -131056, 0, 3, -327663, 2031616, 7, -262127, 65536, 1, -196591, 65536, 2, -131055, 65536, 3, -327662, 2097152, 7, -262126, 0, 1, -196590, 0, 2, -131054, 0, 3, -327661, 2162688, 7, -262125, 65536, 1, -196589, 65536, 2, -131053, 65536, 3, -327660, 2228224, 7, -262124, 0, 1, -196588, 0, 2, -131052, 0, 3, -327659, 2031616, 7, -262123, 65536, 1, -196587, 65536, 2, -131051, 65536, 3, -327658, 2097152, 7, -262122, 0, 1, -196586, 0, 2, -131050, 0, 3, -327657, 2162688, 7, -262121, 65536, 1, -196585, 65536, 2, -131049, 65536, 3, -262120, 0, 1, -196584, 0, 2, -131048, 0, 3, -262119, 65536, 1, -196583, 65536, 2, -131047, 65536, 3, -196582, 0, 2, -131046, 0, 3, -327653, 2162688, 7, -131045, 65536, 3, -327652, 2228224, 7, -262116, 0, 1, -327651, 2031616, 7, -262115, 65536, 1, -196579, 65536, 2, -327650, 2097152, 7, -262114, 0, 1, -196578, 0, 2, -131073, 983041, 1, -65537, 983041, 1, -1, 983041, 2, -196609, 983041, 0, -327656, 2228224, 7, -327655, 2031616, 7, -327654, 2097152, 7, -262118, 0, 1, -262117, 65536, 1, -196581, 65536, 2, -196580, 0, 2, -131044, 0, 3, -131043, 65536, 3, -131042, 0, 3, -65506, 2097152, 6, -327649, 2031616, 7, -262113, 65536, 1, -196577, 65536, 2, -131041, 65536, 3, -65505, 2031616, 6, 31, 65537, 0, -327648, 2097152, 7, -262112, 0, 1, -196576, 0, 2, -131040, 0, 3, -65504, 2097152, 6, 32, 65537, 0, -327647, 2162688, 7, -262111, 65536, 1, -196575, 65536, 2, -131039, 65536, 3, -65503, 2162688, 6, 33, 65537, 0, -327646, 2031616, 7, -262110, 2031616, 7, -196574, 2031616, 6, -131038, 2031616, 7, -65502, 2031616, 6, 34, 65537, 0, -327645, 2293760, 7, -262109, 2293760, 7, -196573, 2293760, 6, -131037, 2293760, 7, -65501, 2293760, 6, 35, 131073, 0, -262108, 983041, 0, -196572, 983041, 1, -131036, 983041, 1, -65500, 983041, 2)

[node name="Boss1" parent="." unique_id=2073225313 instance=ExtResource("8_r4118")]
position = Vector2(269, 0)
scale = Vector2(1.4, 1.8)

[node name="intearactionzone" type="Area2D" parent="Boss1" unique_id=217862916]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss1/intearactionzone" unique_id=1849820304]
position = Vector2(0, -17.222223)
shape = SubResource("RectangleShape2D_r4118")

[node name="areaExit" parent="." unique_id=1622782863 instance=ExtResource("4_k5wkf")]
position = Vector2(50.999985, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaExit" unique_id=62557866]
position = Vector2(-13.499985, -20.5)
shape = SubResource("RectangleShape2D_k5wkf")

[node name="Player1" parent="." unique_id=1611356703 instance=ExtResource("6_mdvpc")]
position = Vector2(52, -2.3841858e-07)
speed = 6.0
jump_H = 8.5

[connection signal="body_entered" from="Boss1/intearactionzone" to="." method="_on_intearactionzone_body_entered"]
[connection signal="body_entered" from="areaExit" to="." method="_on_area_exit_body_entered"]
[connection signal="body_exited" from="areaExit" to="." method="_on_area_exit_body_exited"]
